resolved overflow issue in header section

--- a/css/_header.css
+++ b/css/_header.css
@@ -34,8 +34,9 @@
 .header__nav {
   display: flex;
   margin: auto 0;
-
-  gap: 62.5px;
+  margin-right: 50px;
+  gap: 5px 62.5px;
+  flex-wrap: wrap;
 }
 
 .header__link {
@@ -43,7 +44,7 @@
   font-weight: 600;
   line-height: 25px;
   color: var(--white);
-  transition: color .3s ease;
+  transition: color 0.3s ease;
 }
 
 .header__link:hover {
@@ -70,7 +71,8 @@
   line-height: 25px;
   color: var(--white);
   background-color: transparent;
-  transition: color .3s ease;
+  transition: color 0.3s ease;
+  white-space: nowrap;
 }
 
 .header__btn:hover {
@@ -105,7 +107,7 @@
   background-image: url("data:image/svg+xml,%3Csvg width='13' height='13' viewBox='0 0 13 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z' fill='%23fff'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-size: cover;
-  transition: background-image .3s;
+  transition: background-image 0.3s;
 }
 
 .header__row-2 {
@@ -113,7 +115,7 @@
   z-index: 100;
   padding-top: 18px;
   padding-bottom: 17px;
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .header__select-wrap {
@@ -163,7 +165,7 @@
     opacity: 0;
     overflow-y: scroll;
     z-index: 200;
-    transition: transform .3s;
+    transition: transform 0.3s;
   }
 
   .header__menu.show--menu {
